# RealtyInsights

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: census_variables.yml
realty_dbt/: dbt_project.yml
realty_dbt/macros/: _macros.yml  build_census_staging.sql  clean_census_value.sql  get_census_subject_variables.sql  log_quality_issues_census.sql
realty_dbt/models/logging/: log_census_subject_zcta.sql
realty_dbt/models/staging/: _schema.yml  _sources.yml  schema.yml  sources.yml
realty_dbt/models/staging/census/: stg_census__base_county.sql  stg_census__base_us.sql  stg_census__base_zcta.sql  stg_census__data_profile_county.sql  stg_census__data_profile_us.sql  stg_census__data_profile_zcta.sql  stg_census__data_quality_issues.sql  stg_census__subject_county.sql  stg_census__subject_us.sql  stg_census__subject_zcta.sql
realty_dbt/models/staging/realtor/: stg_realtor__zip.sql
realty_dbt/seeds/: _seeds.yml  census__value_annotations.csv
scripts/: create_db_users.sh  create_schemas.sh  create_virtual_environment.sh  grant_privileges.sh  setup_database.sh
src/download/: download_census.py  download_census_data.py  download_csv.py  download_realtor.py  download_realtor_data.py
src/ingest/: ingest_csv_to_db.py
src/pipeline/: census_pipeline.py  realtor_pipeline.py
src/transform/: transform_census.py  transform_census2.py
src/utils/: api_utils.py  census_utils.py  config.py  db_utils.py  error_simulator.py  file_utils.py
