[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtyinsights"
version = "0.1.0"
description = "Analytics platform for exploring and analying realty data"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",  
    "pandas",     
    "dbt-postgres",
    "requests",
    "sqlalchemy",
    "PyYaml"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline", "download", "ingest", "transform"]


[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyx?$'